--- a/Client/app/src/main/res/layout/room_info.xml
+++ b/Client/app/src/main/res/layout/room_info.xml
@@ -112,12 +112,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:padding="3dp">
 
             <Button
                 android:id="@+id/sendRequest"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="35dp"
                 android:background="@color/colorBrighy"
                 android:textColor="@color/colorAccent"
                 android:text="가입요청"/>
@@ -128,15 +129,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:padding="3dp">
 
             <Button
                 android:id="@+id/btnReturn"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="35dp"
                 android:background="@color/colorBrighy"
-                android:textColor="@color/colorAccent"
-                android:text="목록보기"/>
+                android:text="목록보기"
+                android:textColor="@color/colorAccent" />
 
         </LinearLayout>
 
